Refactor review domain
